# Cargo.toml

[package]
authors = ["Sami J. Mäkinen <sjm@iki.fi>"]
edition = "2021"
resolver = "2"
readme = "README.md"
name = "xy-pwm"
version = "0.1.3"


[features]
stm32f103 = []
stm32f411 = []

# default = ["blue_pill"]
default = ["black_pill"]

blue_pill = ["stm32f1xx-hal", "stm32f103"]
black_pill = ["stm32f4xx-hal", "stm32f411"]
nucleo_f411 = ["stm32f4xx-hal", "stm32f411"]


# Not supported yet
[dependencies.stm32f1xx-hal]
optional = true
version = "0.10"
features = ["rt", "stm32f103"]


# Working
[dependencies.stm32f4xx-hal]
optional = true
version = "0.15"
features = ["rt", "stm32f411", "usb_fs"]


[dependencies]
alloc-cortex-m = "0.4"
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.1"
embedded-hal = "0.2"
fugit = "0.3"
glam = { version = "0.23", default-features = false, features = ["libm"] }
no-std-compat = { version = "0.4", features = ["alloc"] }
panic-halt = "0.2"
stm32-usbd = "0.6"
systick-monotonic = "1.0"
usb-device = "0.2"
usbd-serial = "0.1"


# this lets you use `cargo fix`!
[[bin]]
name = "xy-pwm"
test = false
bench = false


[profile.release]
opt-level = 'z'
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations


[profile.dev]
opt-level = 'z'
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations

# EOF
